[feat] profile edit page styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Behance", "codedamn", "Dribbble"]
+  "cSpell.words": ["Behance", "codedamn", "Dribbble"],
+  "css.lint.unknownAtRules": "ignore"
 }
